Cleaned up some variable naming, added method to keep conversation div scrolled to the bottom

--- a/grails-app/assets/stylesheets/chat.css
+++ b/grails-app/assets/stylesheets/chat.css
@@ -1,14 +1,14 @@
-.privatechatters {
-    border: 10px;
-    padding: 10px;
-}
-
-.publicchatters {
+.boxed {
     border: 10px;
     padding: 10px;
 }
 
 #conversationDiv {
-    border: 10px;
     padding: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: lightgrey;
+
+    height: 300px;
+    overflow: auto;
 }
